--- a/services/ingestion_service/pyproject.toml
+++ b/services/ingestion_service/pyproject.toml
@@ -22,6 +22,9 @@ dev = [
     "pytest>=8.1.1"
 ]
 
+[tool.setuptools]
+packages = ["ingestion_service"]
+
 [tool.uvicorn]
 app = "ingestion_service.main:app"
 host = "0.0.0.0"
