--- a/services/document_service/pyproject.toml
+++ b/services/document_service/pyproject.toml
@@ -14,12 +14,18 @@ dependencies = [
     "uvicorn[standard]>=0.26.0",
     "pydantic>=2.6.0",
     "pydantic-settings>=2.2.1",
-    "structlog>=23.1.0"
+    "structlog>=23.1.0",
+    "sqlalchemy>=2.0.25",
+    "asyncpg>=0.29.0",
+    "aiosqlite>=0.19.0",
+    "aioboto3>=12.3.0"
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=8.1.1"
+    "pytest>=8.1.1",
+    "pytest-asyncio>=0.23.5",
+    "httpx>=0.27.0"
 ]
 
 [tool.uvicorn]
