--- a/services/document_service/pyproject.toml
+++ b/services/document_service/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
 dev = [
     "pytest>=8.1.1",
     "pytest-asyncio>=0.23.5",
-    "httpx>=0.27.0"
+    "httpx>=0.27.0",
+    "testcontainers>=4.6.0"
 ]
 
 [tool.uvicorn]
