--- a/services/ingestion_service/pyproject.toml
+++ b/services/ingestion_service/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "uvicorn[standard]>=0.26.0",
     "pydantic>=2.6.0",
     "pydantic-settings>=2.2.1",
-    "structlog>=23.1.0"
+    "structlog>=23.1.0",
+    "python-multipart>=0.0.9"
 ]
 
 [project.optional-dependencies]
