--- a/services/ingestion_service/pyproject.toml
+++ b/services/ingestion_service/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "pydantic>=2.6.0",
     "pydantic-settings>=2.2.1",
     "structlog>=23.1.0",
-    "python-multipart>=0.0.9"
+    "python-multipart>=0.0.9",
+    "boto3>=1.34.0",
+    "httpx>=0.27.0"
 ]
 
 [project.optional-dependencies]
