--- a/services/ingestion_service/pyproject.toml
+++ b/services/ingestion_service/pyproject.toml
@@ -17,12 +17,18 @@ dependencies = [
     "structlog>=23.1.0",
     "python-multipart>=0.0.9",
     "boto3>=1.34.0",
-    "httpx>=0.27.0"
+    "httpx>=0.27.0",
+    "redis>=5.0.0",
+    "pypdf2>=3.0.0",
+    "python-docx>=1.1.2",
+    "chromadb>=0.5.0"
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=8.1.1"
+    "pytest>=8.1.1",
+    "testcontainers>=4.6.0",
+    "fakeredis>=2.23.2"
 ]
 
 [tool.setuptools]
