--- a/services/ingestion_service/Dockerfile
+++ b/services/ingestion_service/Dockerfile
@@ -1,15 +1,15 @@
 FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
+    PYTHONUNBUFFERED=1 \
+    PIP_DEFAULT_TIMEOUT=120
 
 WORKDIR /app
 
 COPY pyproject.toml README.md ./
 COPY ingestion_service ./ingestion_service
 
-RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir .
+RUN pip install --no-cache-dir .
 
 EXPOSE 8050
 
