--- a/services/ml_observer/pyproject.toml
+++ b/services/ml_observer/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "sqlalchemy>=2.0.25",
     "asyncpg>=0.29.0",
     "aiosqlite>=0.19.0",
-    "httpx>=0.27.0"
+    "httpx>=0.27.0",
+    "python-multipart>=0.0.9"
 ]
 
 [project.optional-dependencies]
