--- a/services/ingestion_service/pyproject.toml
+++ b/services/ingestion_service/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "redis>=5.0.0",
     "pypdf2>=3.0.0",
     "python-docx>=1.1.2",
-    "chromadb>=0.5.0"
+    "chromadb>=0.5.0",
+    "openai>=1.40.0"
 ]
 
 [project.optional-dependencies]
