--- a/services/retrieval_service/pyproject.toml
+++ b/services/retrieval_service/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "uvicorn[standard]>=0.26.0",
     "pydantic>=2.6.0",
     "pydantic-settings>=2.2.1",
-    "structlog>=23.1.0"
+    "structlog>=23.1.0",
+    "httpx>=0.27.0",
+    "chromadb>=0.5.0"
 ]
 
 [project.optional-dependencies]
