--- a/services/retrieval_service/pyproject.toml
+++ b/services/retrieval_service/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "pydantic-settings>=2.2.1",
     "structlog>=23.1.0",
     "httpx>=0.27.0",
-    "chromadb>=0.5.0"
+    "chromadb>=0.5.0",
+    "openai>=1.40.0"
 ]
 
 [project.optional-dependencies]
