--- a/services/mcp_tools_proxy/pyproject.toml
+++ b/services/mcp_tools_proxy/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "pydantic>=2.6.0",
     "pydantic-settings>=2.2.1",
     "structlog>=23.1.0",
-    "anyio>=4.2.0"
+    "anyio>=4.2.0",
+    "httpx>=0.27.0"
 ]
 
 [project.optional-dependencies]
