--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pre-commit
-          for service in ai_orchestrator api_gateway document_service ingestion_service llm_service mcp_tools_proxy retrieval_service safety_service; do
+          for service in ai_orchestrator api_gateway document_service ingestion_service llm_service mcp_tools_proxy retrieval_service safety_service openwebui_adapter; do
             pip install -e "services/$service[dev]"
           done
 
