--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,9 @@ services:
       - OPENAI_API_BASE_URL=http://openwebui_adapter:8093/v1
       - OPENAI_API_KEY=${OPENAI_API_KEY:-dev-openai-key}
       - ENABLE_OPENAI_API=true
+      - GLOBAL_LOG_LEVEL=DEBUG
+      - AIOHTTP_CLIENT_TIMEOUT=
+      - OFFLINE_MODE=True
       
     ports:
       - "3000:8080"
