--- a/services/retrieval_service/pyproject.toml
+++ b/services/retrieval_service/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "structlog>=23.1.0",
     "httpx>=0.27.0",
     "chromadb>=0.5.0",
-    "openai>=1.40.0"
+    "openai>=1.40.0",
+    "whoosh>=2.7.4"
 ]
 
 [project.optional-dependencies]
